--- a/clicache/integration-test/test.bat.in
+++ b/clicache/integration-test/test.bat.in
@@ -17,6 +17,7 @@ rem limitations under the License.
 
 setlocal
 
+set PATH=$<SHELL_PATH:${CMAKE_CURRENT_BINARY_DIR}>\$<CONFIG>;%PATH%
 set PATH=$<SHELL_PATH:$<TARGET_LINKER_FILE_DIR:Apache.Geode>>;%PATH%
 set PATH=$<SHELL_PATH:$<TARGET_LINKER_FILE_DIR:framework>>;%PATH%
 set PATH=$<SHELL_PATH:$<TARGET_LINKER_FILE_DIR:testobject>>;%PATH%
@@ -26,8 +27,6 @@ set PATH=$<SHELL_PATH:$<TARGET_LINKER_FILE_DIR:DHImpl>>;%PATH%
 set PATH=$<SHELL_PATH:$<TARGET_LINKER_FILE_DIR:securityImpl>>;%PATH%
 set PATH=$<SHELL_PATH:$<TARGET_LINKER_FILE_DIR:PkcsWrapper>>;%PATH%
 set PATH=$<JOIN:$<SHELL_PATH:${PATH}>,;>;%PATH%
-
-set PATH=c:\Program Files (x86)\Nunit 2.6.4\bin;%PATH%
 
 set TEST_DIR="$<SHELL_PATH:${TEST_DIR}>"
 set GFCPP="%TEST_DIR%"
@@ -56,7 +55,7 @@ if %errorlevel% neq 0 exit /b %errorlevel%
 rem In Windows, pipes to tee return tee's exit code instead of executable's
 rem exit code. As a workaround we write exit codes to files.
 
-(${NUNIT_CONSOLE} /labels /run:${NAMESPACE}.${TESTCLASS} ..\..\$<CONFIG>\UnitTests.dll 2>&1 && echo 0 >${TEST}.errorlevel || echo 1 >${TEST}.errorlevel) | tee %LOG%
+(${NUNIT_CONSOLE} --labels=On --test=${NAMESPACE}.${TESTCLASS} $<SHELL_PATH:${CMAKE_CURRENT_BINARY_DIR}>\$<CONFIG>\UnitTests.dll 2>&1 && echo 0 >${TEST}.errorlevel || echo 1 >${TEST}.errorlevel) | tee %LOG%
 
 set /p errorlevel= <${TEST}.errorlevel
 if %errorlevel% neq 0 exit /b %errorlevel%
