--- a/clicache/src/impl/AssemblyInfo.cpp.in
+++ b/clicache/src/impl/AssemblyInfo.cpp.in
@@ -43,4 +43,5 @@ using namespace System::Security::Permissions;
 [assembly:SecurityPermission(SecurityAction::RequestMinimum, UnmanagedCode = true)];
 
 [assembly:InternalsVisibleToAttribute("UnitTests@STRONG_NAME_PUBLIC_KEY_ATTRIBUTE@")];
+[assembly:InternalsVisibleToAttribute("Apache.Geode.IntegrationTests@STRONG_NAME_PUBLIC_KEY_ATTRIBUTE@")];
 [assembly:InternalsVisibleToAttribute("cli-unit-tests@STRONG_NAME_PUBLIC_KEY_ATTRIBUTE@")];
