Initial revision of new testing framework.

--- a/cppcache/CMakeLists.txt
+++ b/cppcache/CMakeLists.txt
@@ -98,3 +98,4 @@ add_subdirectory(shared)
 add_subdirectory(static)
 add_subdirectory(test)
 add_subdirectory(integration-test)
+add_subdirectory(integration-test-2)
