GEODE-6218: Improves data output performance.
* Update benchmark to measure different data types.
* Convert integer writes to cast writes
* Implement UTF-8 to JMUTF-8 inline

--- a/cppcache/benchmark/CMakeLists.txt
+++ b/cppcache/benchmark/CMakeLists.txt
@@ -16,7 +16,8 @@
 add_executable(cpp-benchmark
   main.cpp
   GeodeHashBM.cpp
-  )
+  DataOutputBM.cpp
+  util.hpp)
 
 target_link_libraries(cpp-benchmark
   PUBLIC
