--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,6 +367,7 @@ add_subdirectory(tests/javaobject)
 add_subdirectory(dependencies)
 add_subdirectory(openssl-compat)
 add_subdirectory(cppcache)
+add_subdirectory(ccache)
 add_subdirectory(cryptoimpl)
 add_subdirectory(sqliteimpl)
 add_subdirectory(templates/security)
