--- a/tests/cpp/fwklib/CMakeLists.txt
+++ b/tests/cpp/fwklib/CMakeLists.txt
@@ -57,14 +57,13 @@ target_include_directories(framework
   PUBLIC
     # headers for this library are referenced relative to the parent
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
-  PRIVATE
-    $<TARGET_PROPERTY:apache-geode,SOURCE_DIR>/../src
 )
 
 target_link_libraries(framework
   PUBLIC
     apache-geode
   PRIVATE
+    apache-geode-internals
     ACE::ACE
     internal
     _WarningsAsError
