New Socket impl

--- a/cppcache/integration/test/CMakeLists.txt
+++ b/cppcache/integration/test/CMakeLists.txt
@@ -46,6 +46,7 @@ add_executable(cpp-integration-test
   SocketTest.cpp
   PlainSocketTest.cpp
   SimpleProxySocketTest.cpp
+  SslSocketTest.cpp
 )
 
 target_compile_definitions(cpp-integration-test
