--- a/dependencies/sqlite/CMakeLists.txt
+++ b/dependencies/sqlite/CMakeLists.txt
@@ -13,47 +13,28 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-project( sqlite VERSION 3320300 LANGUAGES NONE )
+project( sqlite LANGUAGES NONE )
 
-set( SHA256 e9cec01d4519e2d49b3810615237325263fe1feaceae390ee12b4a29bd73dbe2 )
-
-
-set( EXTERN ${PROJECT_NAME}-extern )
 include(ExternalProject)
-ExternalProject_Add( ${EXTERN}
-  URL "https://www.sqlite.org/2020/sqlite-amalgamation-${PROJECT_VERSION}.zip"
-  URL_HASH SHA256=${SHA256}
-  UPDATE_COMMAND ""
+ExternalProject_Add( ${PROJECT_NAME}-extern
+  GIT_REPOSITORY https://github.com/azadkuh/sqlite-amalgamation
+  GIT_SHALLOW TRUE
   CMAKE_ARGS
     -DCMAKE_BUILD_TYPE=$<CONFIG>
     -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
+    -DSQLITE_ENABLE_JSON1=OFF
 )
 
-ExternalProject_Get_Property( ${EXTERN} SOURCE_DIR )
-ExternalProject_Get_Property( ${EXTERN} INSTALL_DIR )
-
-ExternalProject_Add_Step( ${EXTERN} CMakeLists.txt
-  DEPENDEES patch
-  DEPENDERS configure
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt.in
-  BYPRODUCTS ${SOURCE_DIR}/CMakeLists.txt
-  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt.in ${SOURCE_DIR}/CMakeLists.txt
-)
-
-if (WIN32)
-  set(CMAKE_SHARED_LIBRARY_SUFFIX .lib)
-endif()
+ExternalProject_Get_Property( ${PROJECT_NAME}-extern SOURCE_DIR )
+ExternalProject_Get_Property( ${PROJECT_NAME}-extern INSTALL_DIR )
 
 add_library(SQLite_sqlite3 INTERFACE)
 target_include_directories(SQLite_sqlite3 SYSTEM INTERFACE
   $<BUILD_INTERFACE:${INSTALL_DIR}/include>
 )
 target_link_libraries(SQLite_sqlite3 INTERFACE
-  ${INSTALL_DIR}/lib/${CMAKE_SHARED_LIBRARY_PREFIX}sqlite3$<$<CONFIG:Debug>:d>${CMAKE_SHARED_LIBRARY_SUFFIX}
+  ${INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}sqlite3$<$<CONFIG:Debug>:d>${CMAKE_STATIC_LIBRARY_SUFFIX}
 )
-add_dependencies(SQLite_sqlite3 ${EXTERN})
-
-set_target_properties(SQLite_sqlite3 PROPERTIES INTERFACE_LIBRARY_DIR ${INSTALL_DIR}/lib)
-set_target_properties(SQLite_sqlite3 PROPERTIES INTERFACE_RUNTIME_DIR ${INSTALL_DIR}/bin)
+add_dependencies(SQLite_sqlite3 ${PROJECT_NAME}-extern)
 
 add_library(SQLite::sqlite3 ALIAS SQLite_sqlite3)
