--- a/cppcache/test/CMakeLists.txt
+++ b/cppcache/test/CMakeLists.txt
@@ -70,9 +70,7 @@ endif()
 target_link_libraries(apache-geode_unittests
   PRIVATE
     apache-geode-static
-    GTest::gtest
-    GTest::gtest_main
-    GTest::gmock
+    GTest::GTest
     _WarningsAsError
     _CppCodeCoverage
 )
