--- a/dependencies/benchmark/CMakeLists.txt
+++ b/dependencies/benchmark/CMakeLists.txt
@@ -16,8 +16,9 @@
 project( benchmark VERSION 1.5.0 LANGUAGES NONE )
 
 set( SHA256 2d22dd3758afee43842bb504af1a8385cccb3ee1f164824e4837c1c1b04d92a0 )
-set( DEPENDS GTest::gtest )
+set( DEPENDS GTest::GTest )
 
+find_package(GTest REQUIRED CONFIG)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "SunPro")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64")
@@ -34,7 +35,7 @@ ExternalProject_Add( ${EXTERN}
     -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
     -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>/$<CONFIG>
     -DCMAKE_BUILD_TYPE=$<CONFIG>
-    -DGTEST_ROOT=$<TARGET_PROPERTY:GTest::gtest,INTERFACE_INCLUDE_DIRECTORIES>/..
+    -DGTEST_ROOT=$<TARGET_PROPERTY:GTest::GTest,INTERFACE_INCLUDE_DIRECTORIES>/..
     -DBENCHMARK_ENABLE_TESTING=OFF
    DEPENDS ${DEPENDS}
 )
