--- a/cppcache/integration/benchmark/CMakeLists.txt
+++ b/cppcache/integration/benchmark/CMakeLists.txt
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+find_package(benchmark REQUIRED CONFIG)
+
 add_executable(cpp-integration-benchmark
   main.cpp
   RegionBM.cpp
